--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,4 @@
-/*dede58.com 做最好的织梦整站模板下载网站*/
+/**/
 @charset "utf-8";
 *{word-wrap:break-word}
 html,body,h1,h2,h3,h4,h5,h6,hr,p,iframe,dl,dt,dd,ul,ol,li,pre,form,button,input,textarea,th,td,fieldset{margin:0;padding:0}
